--- a/src/main/webapp/clientBill.html
+++ b/src/main/webapp/clientBill.html
@@ -10,62 +10,112 @@
 <link rel="stylesheet" href="css/admin.css">
 <script src="js/jquery.js"></script>
 <script src="js/pintuer.js"></script>
-<script src="js/JquerySession.js"></script>
+<script src="js/JquerySession.js" type="text/javascript"></script>
+<script type="text/javascript" src="./js/json.js"></script>
 <script>
-var obj = sessionStorage.getItem('user');//{"userName":"Mr wang","userType":1}
-var user =JSON.parse(obj);//user对象 
+var pages=0;//当前页码
+var orderStatus=6;//订单状态
+var message;//后台参数
+var payStatus=sessionStorage.getItem("payStatus");//支付状态
+if(!payStatus){
+	payStatus=0;//未支付
+}
 	$(document).ready(function(c) {
 			//初始化方法
-	 	 var date=new Date;
-		 var year=date.getFullYear(); 
-		 var month=date.getMonth()+1;
-		 month =(month<10 ? "0"+month:month); 
-		 mydate = (year.toString()+"-"+month.toString());//当前年月
-		 if($.cookie("mydate")=="history"){//历史账单
-		 	mydate="";
-		 }
-		 
-		 $.ajax({//根据userId查找本月账单
-             url: "/fresh/goods/getBill.action",        //后台url
-             data: {                          //数据
-                 userId:user.id,//userId //用户id
-                 month:mydate
-             },
-             type: "POST",                   //类型，POST或者GET
-             dataType: 'json',              //数据返回类型，可以是xml、json等
-             success: function (data) {      //成功，回调函数    画页面
-             	var totalPrice=0;
-                for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                	$("#myBillList").append("<tr><td>data[i].orderId</td><td>data[i].totalPrice</td><td>data[i].deliveryDate</td><td>data[i].address</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"')\">查看</a></td></tr>");
-                	totalPrice+=data[i].totalPrice;
-                }
-               	$("#account").html(totalPrice+"元");//本月应付金额
-                $("#total").html(data.totalPrice+"元");//本月所有用户应付金额
-                 
-             },
-             error: function (er) {          //失败，回调函数
-                 alert(er);
-             }
-         });	
+        findMoreOrder();//查找账单
+		
 	});
-	function getThisMonthBill(){//获取本月账单
-		sessionStorage.setItem("mydate","");
+	function getOrder(payStatus){//获取本月账单 历史账单
+		pages=0;
+		sessionStorage.setItem("payStatus",payStatus);
+		sessionStorage.removeItem("findUserId");
 		window.location.reload();
 	}
-	function getHistoryBill(){
-		sessionStorage.setItem("mydate","history");
-		window.location.reload();
+	function findMoreAllOrder(){//查询所有用户
+		alert(payStatus);
+		pages+=1;
+		message={                          //数据
+                "currentPage":""+pages,
+                "pay_status":""+payStatus
+            };
+		$.ajax({//
+            url: "/fresh/order/selectAllOrderByPayStatus.action",        //后台url
+            data: JSON.stringify(message),
+            type: "POST",                   //类型，POST或者GET
+            dataType: 'json',              //数据返回类型，可以是xml、json等
+            contentType:'application/json;charset=UTF-8',
+            success: function (data) {      //成功，回调函数    画页面
+            	//data={"list1":[{"address":"贵阳市贵阳一中","create_time":"2018-6-5","delivery_time":"2018-6-6","id":"1535452","order_high_price":100.5,"order_low_price":88.2,"order_real_price":0,"order_status":1,"pay_status":0,"user_company":"贵阳一中123","user_id":2},{"address":"贵州省贵阳一中","create_time":"2018-4-22","delivery_time":"2018-4-7","id":"268d5b7cd-6f24-4a73-bfc7-89774ef57c75","order_high_price":61.6,"order_low_price":54,"order_real_price":0,"order_status":6,"pay_status":0,"user_company":"贵阳一中123","user_id":2}],"mseller_month_total_money":81.0};
+            	 $("#allAccount").text(data.mseller_month_total_money+"元");//应付金额
+            	 $("#account").text(data.mseller_month_total_money+"元");//应付金额
+            	 userList = data.userList;
+           	     data=data.list1;
+                 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
+                  	$("#myBillList").append("<tr><td>"+data[i].id+"</td><td>"+data[i].order_high_price+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"')\">查看</a></td></tr>");
+                 }
+                 $("#user option:not(:first)").remove();
+                 for(var i=0;i<data.length;i++){//
+                   	$("#user").append("<option value='"+userList[i].id+"'>"+userList[i].user_company+" </option>");
+                  }
+                 
+            },
+            error: function (er) {          //失败，回调函数
+                alert(er);
+            }
+        });	
+	}
+	function findMoreOrderByUserId(userId){//根据用户查找
+		alert(payStatus);
+		pages+=1;
+		message={                          //数据
+                "user_id":""+userId,//userId //用户id
+                "currentPage":""+pages,
+                "pay_status":""+payStatus
+            };
+		$.ajax({//根据userId查找本月账单
+            url: "/fresh/order/selectUserOrderByPayStatus.action",        //后台url
+            data: JSON.stringify(message),
+            type: "POST",                   //类型，POST或者GET
+            dataType: 'json',              //数据返回类型，可以是xml、json等
+            contentType:'application/json;charset=UTF-8',
+            success: function (data) {      //成功，回调函数    画页面
+            	//data={"list1":[{"address":"贵阳市贵阳一中","create_time":"2018-6-5","delivery_time":"2018-6-6","id":"1535452","order_high_price":100.5,"order_low_price":88.2,"order_real_price":0,"order_status":1,"pay_status":0,"user_company":"贵阳一中123","user_id":2},{"address":"贵州省贵阳一中","create_time":"2018-4-22","delivery_time":"2018-4-7","id":"268d5b7cd-6f24-4a73-bfc7-89774ef57c75","order_high_price":61.6,"order_low_price":54,"order_real_price":0,"order_status":6,"pay_status":0,"user_company":"贵阳一中123","user_id":2}],"month_pay_money":81.0};
+            	 $("#account").text(data.month_pay_money+"元");//应付金额
+           	     data=data.list1;
+                 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
+                  	$("#myBillList").append("<tr><td>"+data[i].id+"</td><td>"+data[i].order_high_price+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"')\">查看</a></td></tr>");
+                 }
+            },
+            error: function (er) {          //失败，回调函数
+                alert(er);
+            }
+        });	
 	}
 	function getOrderDetail(orderId){//进入订单详情
 		sessionStorage.setItem("orderId",orderId);
-	 	window.location.href="./clientBillDetail.html"; 
+		//sessionStorage.setItem("orderStatus",6);//已完成订单状态
+	 	window.location.href="./clientOrderDetail.html"; 
+	}
+	function getOrderByUserId(obj){
+		pages=0;
+		$("#myBillList  tr:not(:first)").empty("");  
+		sessionStorage.setItem("findUserId",obj.value);
+		findMoreOrderByUserId(obj.value);
+	}
+	function findMoreOrder(){
+		var userId = sessionStorage.getItem("findUserId");
+		if(userId){//用户查看更多
+			findMoreOrderByUserId(userId);
+		}else{//所有用户查看更多
+			findMoreAllOrder();
+		}
 	}
 </script>
 </head>
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<header class="panel-head" ><strong class="icon-reorder">本月账单</strong></header> 
+  	<header class="panel-head" ><strong>账单</strong></header> 
   	<table>
   		<th><td>
   			<div class="title">
@@ -75,34 +125,51 @@ var user =JSON.parse(obj);//user对象
 		    </div>
   		</td></th>
   	</table>
-    	<ul id="billTitle">
-    		<li style="float:left;padding:0.2em;"><a href="javascript:getThisMonthBill()">本月账单</a></li>
-    		<li style="float:left;padding:0.2em;"><a href="javascript:getHistoryBill()">历史账单</a></li>
-    	</ul>
-    <div>
-	  	<strong style="float:right;"><b>本月所有用户应结金额：</b>
-	  		<b id="totalPrice">￥27.9 元</b>
-	  	</strong>
-	  </div>
+  	<div>
+	   	<ul id="billTitle">
+	   		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(0)">本月账单</a></li>
+	   		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(1)">历史账单</a></li>
+	   	</ul>
+	</div>
+	<div>
+  	<strong style="float:right;"><b>本月所有用户应付账单为:</b>
+  		<b id="allAccount">￥27.9 元</b>
+  	</strong>
+  </div>
+   	<table class="table table-hover text-center">
+   		<tr>
+   			<th>
+   				<b>请选择用户:</b>
+   			</th>
+	   		<th>
+	   			<select id="user" onchange="getOrderByUserId(this)">
+		   			<option value=" "> </option>
+		   			<!-- <option value="user_name1">贵阳市贵阳一中</option>
+		   			<option value="user_name2">贵阳市贵阳二中</option> -->
+		   		</select>
+	   		</th>
+   		</tr>
+   	</table>
     <table class="table table-hover text-center" id="myBillList">
       <tr>
         <th style="text-align:center; padding:0.5em 2em;">订单号</th>
         <th>金额(元)</th>
-        <th>配送日期</th>
         <th>收货地址</th>
+        <th>时间</th>
         <th>操作</th>
       </tr>
     </table>
   </div>
   <div>
-  	<strong style="float:right;"><b>本月应付金额为：</b>
+  	<strong style="float:right;"><b>本月应付金额:</b>
   		<b id="account">￥27.9 元</b>
   	</strong>
   </div>
 </form>
+<div class="footer">
+	<a href="javaScript:findMoreOrder()">查看更多</a>
+</div>
 <script type="text/javascript">
-
-
 </script>
 </body>
 </html>
