--- a/src/main/webapp/editGoodsType.html
+++ b/src/main/webapp/editGoodsType.html
@@ -10,22 +10,25 @@
 <link rel="stylesheet" href="css/admin.css">
 <script src="js/jquery.js"></script>
 <script src="js/pintuer.js"></script>
+<script type="text/javascript" src="js/JquerySession.js"></script>
+<script type="text/javascript" src="./js/json.js"></script>
 <script>
+var message;//请求参数
+//var goodsType=sessionStorage.getItem("goodsType");
+
 	$(document).ready(function(c) {
-	
+		message={};
 		$.ajax({//查询商品种类
-	             url: "/fresh/goods/getGoodsType.action",        //后台url
-	             data: {                          //数据
-	                 goodsType:""
-	             },
+	             url: "/fresh/goods_type/showAllType.action",        //后台url
+	             data:JSON.stringify(message),
 	             type: "POST",                   //类型，POST或者GET
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
+	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数    画页面
-	                 	alert(data.result);
-	                 	$("#goodsType").remove();//移除
-	                 	$("#title").append("<ul id='goodsType'></ul>");
+	            	 data=data.list;
+	                 //	$("#goodsType").remove();//移除
 	                  for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                         $("#goodsType").append("<tr><td>"+data[i].goodsTypeId+"</td><td>"+data[i].goodsTypeName+"</td><td>"+data[i].createDate+"</td><td><input type='button' onclick='deleteGoodsType("+data[i].goodsTypeId+")' value='删除'/><input type='button' onclick='editGoodsType("+data[i].goodsTypeId+")' value='修改'/></td></tr>");
+                         $("#goods").append("<tr><td>"+data[i].id+"</td><td>"+data[i].goods_type_name+"</td><td>"+data[i].create_time+"</td><td><input type='button' onclick='deleteGoodsType("+data[i].id+")' value='删除'/><input type='button' onclick='editGoodsType("+data[i].id+")' value='修改'/></td></tr>");
                      }
 	             },
 	             error: function (er) {          //失败，回调函数
@@ -40,17 +43,23 @@
 		var str=prompt("请输入种类名称","");
 	    if(str)
 	    {
-	       $.ajax({//新增商品种类
-	             url: "/fresh/goods/addGoodsType.action",        //后台url
-	             data: {                          //数据
-	                 goodsTypeName:str,
-	                 goodsTypeId:goodsTypeId
-	             },
+	    	message={
+	    			"goods_type":{  "goods_type_name":str,
+                "id":goodsTypeId}
+	    			//数据
+	               
+	             };
+	       $.ajax({//修改商品种类
+	             url: "/fresh/goods_type/updateGoods_type_name.action",        //后台url
+	             data:JSON.stringify(message),
 	             type: "POST",                   //类型，POST或者GET
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
+	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数    画页面
-	                 	alert(data.result);
-	                 	window.location.reload();
+	            	if(data.result==1){
+             			alert("修改成功");
+             			window.location.reload();
+             		}
 	             },
 	             error: function (er) {          //失败，回调函数
 	                 alert(er);
@@ -59,16 +68,22 @@
 	    }
 	}
 	function deleteGoodsType(goodsTypeId){
+		message={ "goods_type":{                         //数据
+                "id":goodsTypeId,
+                "status":0}
+            };
 		$.ajax({//删除商品种类
-	             url: "/fresh/goods/delGoodsType.action",        //后台url
-	             data: {                          //数据
-	                 goodsTypeId:goodsTypeId
-	             },
+	             url: "/fresh/goods_type/updateGoods_type_status.action",        //后台url
+	             data:JSON.stringify(message),
 	             type: "POST",                   //类型，POST或者GET
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
+	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数    画页面
 	                 	//alert(data.result);
-	                 	window.location.reload();
+	                 	if(data.result==1){
+	             			alert("删除成功");
+	             			window.location.reload();
+	             		}
 	             },
 	             error: function (er) {          //失败，回调函数
 	                 alert(er);
@@ -77,24 +92,44 @@
 	}
 	function addGoodsType(){
 		var goodsTypeName = $('#goodsTypeName').val();
-		alert(goodsTypeName);
+		message={  "goods_type" :{                     //数据
+                "goods_type_name":goodsTypeName,
+                "create_time":getNowFormatDate(),
+                "status":1}  
+            };
 		$.ajax({//新增商品种类
-	             url: "/fresh/goods/addGoodsType.action",        //后台url
-	             data: {                          //数据
-	                 goodsTypeName:goodsTypeName,
-	                 goodsTypeId:""
-	             },
+	             url: "/fresh/goods_type/addGoods_type.action",        //后台url
+	             data:JSON.stringify(message),
 	             type: "POST",                   //类型，POST或者GET
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
+	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数    画页面
 	                 	//alert(data.result);
-	                 	window.location.reload();
+	             		if(data.result==1){
+	             			alert("新增成功");
+	             			window.location.reload();
+	             		}
 	             },
 	             error: function (er) {          //失败，回调函数
 	                 alert(er);
 	             }
 	         });
 	}
+	function getNowFormatDate() {//获取当前日期  格式 : 2018/08/01
+        var date = new Date();
+        var seperator1 = "/";
+        var year = date.getFullYear();
+        var month = date.getMonth() + 1;
+        var strDate = date.getDate();
+        if (month >= 1 && month <= 9) {
+            month = "0" + month;
+        }
+        if (strDate >= 0 && strDate <= 9) {
+            strDate = "0" + strDate;
+        }
+        var currentdate = year + seperator1 + month + seperator1 + strDate;
+        return currentdate;
+    }
 </script>
 </head>
 <body>
@@ -110,7 +145,7 @@
 			    	
 		    	</ul>
 		    </div>
-  		</td></th>
+  		</td>
   	</table>
   	<div><strong>现有的菜品种类详情如下:</strong></div>
     <table class="table table-hover text-center" id="goods">
@@ -120,14 +155,14 @@
         <th>添加日期</th>
         <th>操作</th>
       </tr>
-      <tr>
+      <!-- <tr>
       	<td>类1</td>
       	<td>叶菜类</td>
       	<td>2017-5-8</td>
       	<td><input type="button" onclick="deleteGoodsType('类1')" value="删除"/><input type="button" onclick="editGoodsType('lei1')" value="修改"/></td>
-      </tr>
+      </tr> -->
     </table>
-    <div>添加菜品种类：<input type="text" value="种类名" id="goodsTypeName"/> <input type="button" onclick="addGoodsType()" value="确定"/></div>
+    <div>添加菜品种类：<input type="text"  id="goodsTypeName"/> <input type="button" onclick="addGoodsType()" value="确定"/></div>
   </div>
 </form>
 <script type="text/javascript">
