--- a/src/main/webapp/userAfterSaleDetail.html
+++ b/src/main/webapp/userAfterSaleDetail.html
@@ -24,14 +24,6 @@ var afterSaleStatusName={"1": "未受理","2": "处理中","3": "处理完成"};
 var totalPrice=0//总计金额
 	$(document).ready(function(c) {
 			//初始化方法
-		//$("#reason").val("有两千kg是坏的");//更改售后原因
-    	//$("#reason").attr("disabled",true);//更改售后原因不可编辑
-    	//$("#img").html("");
-    	//$("#price").html("");
-    	//$("#dealWith").html("<strong><b>处理方式：</b><b>更换</b></strong>");//处理方式
-    	//$("#afterSaleStatus").html("<strong><b>售后状态：</b><b>已处理</b></strong>");//售后状态
-		//$("#price").attr("display","none");//更改售后原因不可编辑
-		//$("#price").html("<strong><b>总计：</b><b>￥19.30元</b></strong>");
 		findMoreOrderByStatus();
 	});
 	function findMoreOrderByStatus(){
@@ -69,6 +61,9 @@ var totalPrice=0//总计金额
              }
          });
 	}
+	function returnLastPage(){//返回上一页
+		window.history.go(-1); // 返回上一页  
+	}
 </script>
 </head>
 <body>
@@ -76,6 +71,17 @@ var totalPrice=0//总计金额
   <div class="panel admin-panel">
   	<div class=""><a></a></div>
     <div class="panel-head"><strong> 订单详情</strong></div>
+    <table>
+  		<th><td>
+  			<div class="title">
+		    	<ul>
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
+		    	</ul>
+		    </div>
+  		</td></th>
+  	</table>
     <table class="table table-hover text-center" id="order">
       <tr>
         <th>菜名</th>
