--- a/src/main/webapp/userOrderList.html
+++ b/src/main/webapp/userOrderList.html
@@ -11,12 +11,11 @@
 <script src="js/jquery.js"></script>
 <script src="js/pintuer.js"></script>
 <script src="js/JquerySession.js" type="text/javascript"></script>
-
 <script type="text/javascript" src="./js/json.js"></script>
 <script>
 	var orderStatus=sessionStorage.getItem("orderStatus");
-	if(orderStatus==""||orderStatus==null){
-		orderStatus=1;
+	if(!orderStatus){
+		orderStatus="1";
 	}
 	var pages=0;
 	var orderStatusName={"1":"待报价","2":"待确认","3":"待发货","4":"待收货","5":"售后处理中","6":"已完成"};
@@ -30,19 +29,17 @@ $(document).ready(function(c) {
 	findMoreOrderByStatus();
 	
 });
-function getOrderDetail(orderId){//跳转到订单详情页面  id为订单id
+function getOrderDetail(orderId,orderPrice,lowPrice,highPrice){//跳转到订单详情页面  id为订单id
 	 sessionStorage.setItem("orderId",orderId);
 	 sessionStorage.setItem("orderStatus",orderStatus);
-	 if(orderStatus==5){
+	 sessionStorage.setItem("orderPrice",orderPrice);
+	 sessionStorage.setItem("lowPrice",lowPrice);
+	 sessionStorage.setItem("highPrice",highPrice);
+	  if(orderStatus==5){
 		 window.location.href="./userAfterSaleDetail.html"; //售后详情页面
-	 }else if(orderStatus==6){
-		 window.location.href="./userBillDetail.html"; //已完成订单详情页面
 	 }else{
 		 window.location.href="./userOrderDetail.html"; 
-	 }
-//	 sessionStorage.setItem("orderId",orderId);
-//	 sessionStorage.setItem("orderStatus",orderStatus);
-//	 window.location.href="./userOrderDetail.html"; 
+	 } 
 }
 function returnLastPage(){//返回上一页
 	window.history.go(-1); // 返回上一页  
@@ -71,9 +68,9 @@ function findMoreOrderByStatus(){
           alert(data)
           	for(var i=0;i<data.length;i++){
          		if(orderStatus==1){
-          		    $("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].order_low_price+"~"+data[i].order_high_price+"</td><td>"+orderStatusName[data[i].order_status]+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"')\">查看</a></td></tr>");
+          		    $("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].order_low_price+"~"+data[i].order_high_price+"</td><td>"+orderStatusName[data[i].order_status]+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"','"+data[i].order_real_price+"','"+data[i].order_low_price+"','"+data[i].order_high_price+"')\">查看</a></td></tr>");
           		}else{
-          		    $("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].order_real_price+"</td><td>"+orderStatusName[data[i].order_status]+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"')\">查看</a></td></tr>");
+          		    $("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].order_real_price+"</td><td>"+orderStatusName[data[i].order_status]+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"','"+data[i].order_real_price+"','"+data[i].order_low_price+"','"+data[i].order_high_price+"')\">查看</a></td></tr>");
           		}
           	}
           },
